[package]
name = "ama"
version = "0.1.3"
authors = ["Pierre Talbot <ptalbot@hyc.io>"]

description = "Generic interval and interval set library."
repository = "https://github.com/ptal/ama"
readme = "README.md"
keywords = ["syntax", "quasiquote", "procedural macro", "EDSL"]
license = "MIT/Apache-2.0"

[lib]

name = "ama"
path = "src/libama/lib.rs"
